--- a/main.css
+++ b/main.css
@@ -160,7 +160,10 @@ body
 	color: white;
 }
 @media only screen and (max-width: 1000px) {
-	
+	.col-md-6
+{	
+	background-color:white!important;
+}
   .footer
   {
   	background-image: 	url("images/bg-red-noise.png");
